@@ -8,6 +8,7 @@ DIST patch-2.6.25-git13.bz2 5547821 RMD160 5d4e3a0c70e3a170dc97670f93700032b8010
 DIST patch-2.6.25-git14.bz2 5832821 RMD160 462a63b6fee67837e23e1bd0d7dcf76e11cdf994 SHA1 576363df94cce3098b970dff68c5572daf1df1af SHA256 82e87f12e665d665332ddb0b951cacfe031e9c8afab3c71a3fe971eb1e5ed93c
 DIST patch-2.6.25-git15.bz2 6148865 RMD160 aec4ec08ea7147f45e72cdc5199eac6772bc03a2 SHA1 0ec51ea484db4287cdf6b30a0ab67888f1c28919 SHA256 901433bc3b1c77bdff285e36b1ed0d87a04b25675004680149f6fe27fec5ebfb
 DIST patch-2.6.25-git16.bz2 6617299 RMD160 1153d8bce96386168df2769c3701d4894788a232 SHA1 ab74b85739d38e934685212bf41a63d6a50d5d7d SHA256 1120fc7c113649bee0215873fc438ef382c2a798252148c9158b11794e2c9022
+DIST patch-2.6.25-git17.bz2 6630610 RMD160 0d3a0593cb76a7953388c05efcbe0c6ca9581bfa SHA1 c08588fd1cdae6f3a6f66c697f433fd65bd91e35 SHA256 2d084c73f60c1e445594b8461bb8da35908d1962fb627b32d378f44a3c95e897
 DIST patch-2.6.25-git2.bz2 2579462 RMD160 8780f15389ef7b262844e453981cdd34f8383173 SHA1 406a243ac936102a9afe5b1f98f5799396778dd4 SHA256 617a600b5ad598672ec22042171eca47247e7140ccf328dfcc25d1e85dbc3723
 DIST patch-2.6.25-git3.bz2 3611951 RMD160 b5d77b7f6676aa633d6df7a098b629ab4a680074 SHA1 ea37ab7bb66c408e0c0a6dd177b9a69f46b029fa SHA256 ad6639d7305567052b05711a57712d8c125bdb092c115df20c57bc1949d38fc9
 DIST patch-2.6.25-git4.bz2 3772914 RMD160 0c0227add7739a81f919af715177a1ce13da190a SHA1 c8cb84485a8b2dc8463108b365a7d1416cbde4f5 SHA256 01b1b1907311a4e5e86423db457287fea12ebd0f663e1f0a1522dce3bee97283
@@ -28,6 +29,7 @@ EBUILD git-sources-2.6.25-r13.ebuild 1231 RMD160 9389de3adf897feb1f26aec02ed0a75
 EBUILD git-sources-2.6.25-r14.ebuild 1231 RMD160 f14aa575c7cc1190f00b6c607245bcfece35de19 SHA1 fb091b94b82e93b6ccee6f0d0d05bd0f5d5271e1 SHA256 52c8fb20e07280f8fecae53a694bb732706f6939ad75594e0c5ca9fba1fc7c26
 EBUILD git-sources-2.6.25-r15.ebuild 1231 RMD160 9beee5e1f6e661045938fd866f277a5b24ff2161 SHA1 c48ad5dba3dc52b7bceba43f706afe9c9ac6726c SHA256 c529374be7d739633a7ef535f663752ac024b70dc703d68920b4560cb82d8261
 EBUILD git-sources-2.6.25-r16.ebuild 1231 RMD160 154ec2b6683144ad48943d627d6fb5ddc9aaa583 SHA1 fa40427e98d4dfd6adc041b7fa4f7a511e0dd8ca SHA256 d39f8965fa12527ef6cdd96ed08847f66c33d036a2a937add1bde050fc648ff0
+EBUILD git-sources-2.6.25-r17.ebuild 1231 RMD160 9d64e59809c0a66121ada157c22d8c0e5ea59270 SHA1 734af92315ca011f165d455f1896984f19ec5851 SHA256 18a011352cad950e5ce1dd04e40c36ddc5435315b42fb7f2d34fd561848271fa
 EBUILD git-sources-2.6.25-r2.ebuild 1230 RMD160 19acda1c297a8fb3524ca78c8329b0cde5e4347d SHA1 a84cd1dd5ea9a2dd5c30e926e5ee5e8a93c40c28 SHA256 f07dca17a3841a7515b7270dfc77c335791f86d71a21fbf18aa465a3df23ab89
 EBUILD git-sources-2.6.25-r3.ebuild 1230 RMD160 205311001c23eaf309e835ca42f1d3abbe071fb9 SHA1 90fcac4091a94922d148afea159026654182143f SHA256 613ee708855bc639edb090682efedc5b16619ba28a76faa87e8e5fd5dd935f0c
 EBUILD git-sources-2.6.25-r4.ebuild 1230 RMD160 82ea96691257d0a492157340d572ea9e4c3da462 SHA1 f6013b3d568e25b0c7f73b989c165834dcd19171 SHA256 a0cc81d2b55311312e7dbb638279026604dc73dcbc398391e10801006df5ea49
@@ -39,5 +41,5 @@ EBUILD git-sources-2.6.25-r9.ebuild 1230 RMD160 130a27170b4e09739abd08f23356db60
 EBUILD git-sources-2.6.25_rc9-r1.ebuild 1234 RMD160 ba3e1ad7613c717b3d8b54b244ad721cca598e71 SHA1 5e90bd781d7a892fa81594954a0dd6ba9e143e4b SHA256 30815216632fd991a494999e0131ff6b051900917efb5ed19c44956084379053
 EBUILD git-sources-2.6.25_rc9-r2.ebuild 1234 RMD160 76e8b6c3d191e59a55696f8b70237bfd33fddbbc SHA1 5c53075b2af330a3e66c80144f21c1d6bcf664ee SHA256 ab0fe120b5a6ba4e9c0a67574c0ef7088b62e25d04292c34091e029f1acbc954
 EBUILD git-sources-2.6.25_rc9-r3.ebuild 1234 RMD160 bca213cb05cbc4f99b637a7d6c35c063de697136 SHA1 c2e87145e74446ad9043835ddbda01db633cc24c SHA256 70b486f999b3cfab0469c041a286926edd14d26c813d97f642d60dc33c8503ec
-MISC ChangeLog 45289 RMD160 12b54813c54a3a8840af04a3e47836505cba2906 SHA1 e244e8d75a490d1015c44dacf9917e44c9af97ab SHA256 e91b946e3858daaa2ae9be9c902b12e10a2b15dca8c4d2613565a55b76c7cb21
+MISC ChangeLog 45426 RMD160 0d07e3b4d209c9a8524910605fddb2ab6bb8ca5b SHA1 14a457efabdb1584be050aaa15b33c8a45d97b00 SHA256 87487f3b21d74b6b23f68c7a20369c30aa62024080ce9da80420a4e033803afa
 MISC metadata.xml 443 RMD160 2b491a6310ff59f0658f64be1328b983ac82a462 SHA1 a65b3e97b9088758114ce0dbb46abb15879211e0 SHA256 9232689e2d3a60e31b4b0194770e6395613a110b77bef2f4e2f98d919acbaf13
